messing with bootswatch

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,1 +1,8 @@
 @import "../../node_modules/bootstrap/less/bootstrap.less";
+
+@import "../../node_modules/bootswatch/flatly/variables.less";
+@import "../../node_modules/bootswatch/flatly/bootswatch.less";
+
+.navbar {
+	border-radius: 0px;
+}
