--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,6 +3,8 @@
 @import "../../node_modules/bootswatch/flatly/variables.less";
 @import "../../node_modules/bootswatch/flatly/bootswatch.less";
 
+@import "../../node_modules/font-awesome/less/font-awesome.less";
+
 .navbar {
 	border-radius: 0px;
 }
