more fontawesom setup

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4,6 +4,7 @@
 @import "../../node_modules/bootswatch/flatly/bootswatch.less";
 
 @import "../../node_modules/font-awesome/less/font-awesome.less";
+@fa-font-path: "../fonts";
 
 .navbar {
 	border-radius: 0px;
